<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MissMeKissMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="txt_signup">Sign up</string>
    <string name="empty_string"></string>
    <string name="email_hint">Email address</string>
    <string name="pwd_hint">Password</string>
    <string name="create_account">Create new account here..</string>
    <string name="signup">SIGN UP !</string>
    <string name="remember">Remember me</string>
    <string name="forget">Forgot Password?</string>
    <string name="forget_text">FORGOT PASSWORD</string>
    <string name="forget_change_text">CHANGE PASSWORD</string>
    <string name="change_password">Change Password</string>
    <string name="forget_email_hint">Enter your email address</string>
    <string name="change_pass_old_hint">Enter your old password</string>
    <string name="change_pass_new_hint">Enter your new password</string>
    <string name="change_pass_re_hint">Re-type password</string>
    <string name="dialog_send">SEND</string>
    <string name="dialog_save">SAVE</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type password</string>
    <string name="contact">Contact</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kiss_left">Kisses Left</string>
    <string name="title_activity_new_kiss">NewKissActivity</string>
    <string name="new_kisses">New Kisses</string>
    <string name="purchase">Purchase Kisses</string>
    <string name="track_kiss">Track Kiss</string>
    <string name="blind_kiss">Blind Kiss</string>
    <string name="contact_page">Contacts</string>
    <string name="vault_kisses">Vault Kiss</string>
    <string name="floating_kisses">Traveling Kiss</string>
    <string name="profile">Profile</string>
    <string name="select_kiss">Select your kiss option</string>
    <string name="realtimenew_kisses">Real Time Kiss</string>
    <string name="Purchase_kisses">Kiss Shop</string>
    <string name="instant_kiss">Instant Kiss</string>
    <string name="realtimenew_kisses_select">Select whom you want to send kiss</string>
    <string name="realtimenew_kisses_select_type">Select how you want to send kiss</string>
    <string name="realtimenew_kisses_select_typee">Set time to deliver your kiss</string>
    <string name="upload_attachment">Upload your attachments with kiss</string>
    <string name="kiss_msg">Enter your kiss message here&#x2026;</string>
    <string name="done">DONE!</string>
    <string name="next">Next</string>
    <string name="go_home">&lt;u>Go Home&lt;/u></string>
    <string name="go_homee">Go Home</string>
    <string name="your">Your kiss was sent</string>
    <string name="succes">Successfully!</string>
    <string name="track">Track your Kiss</string>
    <string name="ok">OK</string>
    <string name="clear">Clear all</string>
    <string name="save">Save</string>
    <string name="prof_save">I&#8217;m finished...!</string>
    <string name="send_kiss">SEND A KISS</string>
    <string name="yes">Yes</string>
    <string name="blind_contact">User not in your contact list want to save?</string>

    <!-- profile page -->
    <string name="profile_name">Name</string>
    <string name="profile_phono">Contact Number</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_gender">Gender</string>
    <string name="vault_code">Vault Code</string>
    <string name="opt_blindkiss">Blind Kiss</string>

    <!-- Vault code -->

    <string name="enter_code">Enter Vault Code</string>
    <string name="received">Received Kisses</string>
    <string name="sent">Sent Kisses</string>

    <!-- GCM -->
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="resend">Resend verify code ?</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="message_attachments">Message Attachments</string>
    <string name="times_ravelled">Time Traveled</string>
    <string name="miles_travelled">Miles Traveled</string>
    <string name="view_path">View Path</string>
     
    <string name="updates">We ask permission to access your contact list so that you will know who amongst your friends is also using MissMeKissMe. MissMeKissMe will not share this list with anyone.</string>
    
</resources>