<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/thirty_five"
        android:background="@drawable/back_arrow"
        android:contentDescription="@string/empty_string"
        android:onClick="onClickBack" />

    <TextView
        android:id="@+id/title_txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/ten"
        android:text="@string/txt_signup"
        android:textColor="@color/black"
        android:textSize="@dimen/fourty_sp" />

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_txt_signup"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox"
            android:ems="12"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="@dimen/ten"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/email_txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/textbox"
            android:ems="12"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/ten"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/textbox"
            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/ten"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/pwd_retype_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/textbox"
            android:ems="12"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:padding="@dimen/ten"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/contact_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/textbox"
            android:ems="12"
            android:hint="@string/contact"
            android:inputType="phone"
            android:padding="@dimen/ten"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/gender_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/textbox"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginStart="@dimen/fifteen"
                android:text="@string/male"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/seventeen_sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/forty"
                android:layout_marginStart="@dimen/forty"
                android:text="@string/female"
                android:textColor="@color/semi_black"
                android:textSize="@dimen/seventeen_sp" />
        </RadioGroup>

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/forty"
            android:layout_marginStart="@dimen/forty"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/signup_btn"
            android:onClick="onClickSignup" />
    </LinearLayout>

</RelativeLayout>