<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty_five"
        android:contentDescription="@string/empty_string"
        android:padding="@dimen/ten"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/fifty_sp" />

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_txt"
        android:layout_marginTop="@dimen/fifty"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/fifteen"
            android:drawableStart="@drawable/email_icon"
            android:ems="12"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="@dimen/ten"
            android:textSize="@dimen/fifteen_sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:background="@drawable/textbox"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/twenty"
            android:drawableStart="@drawable/password_icon"
            android:ems="12"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="@dimen/ten"
            android:textSize="@dimen/fifteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/twenty"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/remeber_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/remeber_checkbox_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:layout_marginLeft="3dp"
            android:textColor="@color/semi_black_login"
            android:textSize="@dimen/fourteen_sp" />

        <TextView
            android:id="@+id/Sign_IN_Forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_five"
            android:layout_marginStart="@dimen/twenty_five"
            android:clickable="true"
            android:onClick="openForgetPage"
            android:text="@string/forget"
            android:textSize="@dimen/fourteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sign_up_text"
        android:layout_below="@+id/sign_forget"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/login_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signinbtn"
            android:clickable="true"
            android:contentDescription="@string/empty_string"
            android:onClick="checkLoginCredentials"
            android:textSize="@dimen/thirteen_sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" >

        <TextView
            android:id="@+id/create_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:text="@string/create_account"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/Sign_Up_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five"
            android:layout_marginStart="@dimen/five"
            android:clickable="true"
            android:onClick="openSignUpPage"
            android:text="@string/signup"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>