<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vault_bg"
     >

    <RelativeLayout
        android:id="@+id/real_newkiss_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/vaultsecond_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:contentDescription="@string/empty_string"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/newKiss_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/vault_kisses"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/vaultKiss_header1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/real_newkiss_header"
        android:background="@color/button_bg"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/realnewKiss_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/fifteen"
            android:text="@string/received"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/vault_gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vaultKiss_header1"
        android:layout_margin="4dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:listSelector="#9ac7be"
        android:numColumns="2"
        android:padding="5dp"
        android:scrollbars="none"
        android:verticalSpacing="10dp" >
    </GridView>

</RelativeLayout>