<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95000000"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="290dp"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/alert_titlepc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forget_change_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relativepc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alert_titlepc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/alert_edit_txt_old"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/textbox"
                android:drawablePadding="@dimen/fifteen"
                android:ems="12"
                android:hint="@string/change_pass_old_hint"
                android:inputType="textPassword"
                android:maxLength="40"
                android:padding="@dimen/ten"
                android:textSize="@dimen/fifteen_sp" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="0.25dp"
                android:layout_below="@+id/alert_edit_txt_old"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginStart="@dimen/fifteen"
                android:background="@drawable/underline" />

            <EditText
                android:id="@+id/alert_edit_txt_new"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/textbox"
                android:drawablePadding="@dimen/fifteen"
                android:ems="12"
                android:hint="@string/change_pass_new_hint"
                android:inputType="textPassword"
                android:maxLength="40"
                android:padding="@dimen/ten"
                android:textSize="@dimen/fifteen_sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="0.25dp"
                android:layout_below="@+id/alert_edit_txt_new"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginStart="@dimen/fifteen"
                android:background="@drawable/underline" />

            <EditText
                android:id="@+id/alert_edit_txt_re"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/textbox"
                android:drawablePadding="@dimen/fifteen"
                android:ems="12"
                android:hint="@string/change_pass_re_hint"
                android:inputType="textPassword"
                android:maxLength="40"
                android:padding="@dimen/ten"
                android:textSize="@dimen/fifteen_sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="0.25dp"
                android:layout_below="@+id/alert_edit_txt_re"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/fifteen"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginRight="@dimen/fifteen"
                android:layout_marginStart="@dimen/fifteen"
                android:background="@drawable/underline" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/alert_password_rr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativepc"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp" >

            <Button
                android:id="@+id/alert_cancel_btn_pc"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/dialog_button"
                android:text="@string/dialog_cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/alert_ok_btn_pc"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/dialog_button"
                android:text="@string/dialog_save"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>